# monkey-c-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
monkey-c-formatter/: Cargo.toml  README.md
monkey-c-formatter/examples/: TestClass.mc  format.rs  test.mc
monkey-c-formatter/src/: doc.rs  lib.rs  main.rs  operators.rs
monkey-c-formatter/tests/: doc.rs  formatter.rs  roundtrip.rs  snapshots.rs
monkey-c-formatter/tests/common/: mod.rs
monkey-c-formatter/tests/snapshot_inputs/: aligned_dict_preserves_leading_comment.mc  aligned_dict_trailing_comma.mc  aligned_dict_with_section_breaks.mc  aligned_trailing_comments.mc  annotation_glance.mc  annotation_with_args.mc  array_blank_line_between_entries.mc  array_entry_inline_trailing_comment.mc  array_inline_trailing_comment_stays_inline.mc  array_standalone_comment_between_entries.mc  before_bracket_comments.mc  binary_chain_wraps_at_operator.mc  bit_shift_operators.mc  bling_prefixed_paths.mc  block_comment_preserved.mc  byte_array_literal.mc  char_escape_sequences.mc  char_literal.mc  class_with_blank_line_between_methods.mc  class_with_field_and_methods.mc  class_without_blank_line_between_methods.mc  comments.mc  dict_dotted_keys.mc  do_while.mc  enum_aligned_values.mc  enum_commented_out_variant.mc  enum_named.mc  enum_negative_values.mc  enum_with_trailing_comments.mc  float_double_exponents.mc  float_literal_forms.mc  function_param_trailing_comment.mc  generic_params_comma_vs_or.mc  hex_literal_forms.mc  hex_long_literal.mc  if_else_with_trailing_comments.mc  if_trailing_comment_no_else.mc  inline_after_open_brace.mc  inline_comments.mc  integer_literal_forms.mc  (+23 more)
monkey-c-formatter/tests/snapshots/: snapshots__aligned_dict_breaks_when_wide.snap  snapshots__aligned_dict_fits_stays_inline.snap  snapshots__aligned_dict_unaffected_when_flag_off.snap  snapshots__and_or_source_form_preserved.snap  snapshots__annotation_with_comments.snap  snapshots__array_inline_and_trailing_comma.snap  snapshots__array_no_trailing_comma_breaks_when_wide.snap  snapshots__binary_operator_spacing.snap  snapshots__bling_preserved.snap  snapshots__block_comment_in_function_body.snap  snapshots__class_visibility_modifiers.snap  snapshots__class_with_extends.snap  snapshots__dict_blank_line_between_entries.snap  snapshots__dict_entry_inline_trailing_comment.snap  snapshots__dict_expression_key.snap  snapshots__dict_no_trailing_comma_fits_inline.snap  snapshots__dict_standalone_comment_between_entries.snap  snapshots__for_loop.snap  (+115 more)
monkey-c-lsp/: Cargo.toml
monkey-c-lsp/src/: analysis.rs  main.rs  position.rs
(+74 files in other folders)
