[workspace]
resolver = "3"
members = [
  "monkey-c-parser",
  "monkey-c-formatter",
  "monkey-c-linter"
]

[workspace.package]
edition = "2024"
version = "0.2.0"
license = "MIT"
repository = "https://github.com/bombsimon/monkey-c-rs"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
monkey-c-parser = { path = "monkey-c-parser" }
