[workspace]
resolver = "3"
members = [
  "monkey-c-parser",
  "monkey-c-formatter",
  "monkey-c-linter",
  "monkey-c-diagnostics", "monkey-c-lsp",
]

[workspace.package]
edition = "2024"
version = "0.2.0"
license = "MIT"
repository = "https://github.com/bombsimon/monkey-c-rs"

[workspace.dependencies]
ariadne = "0.6"
clap = { version = "4", features = ["derive"] }
monkey-c-diagnostics = { path = "monkey-c-diagnostics" }
monkey-c-formatter = { path = "monkey-c-formatter" }
monkey-c-linter = { path = "monkey-c-linter" }
monkey-c-parser = { path = "monkey-c-parser" }
