[package]
name = "monkey-c-formatter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
monkey-c-parser.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
