[package]
name = "monkey-c-formatter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ariadne.workspace = true
clap.workspace = true
monkey-c-diagnostics.workspace = true
monkey-c-parser.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
