[package]
name = "monkey-c-lsp"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lsp-server = "0.8"
lsp-types = "0.97"
serde_json = "1"
monkey-c-formatter.workspace = true
monkey-c-linter.workspace = true
monkey-c-parser.workspace = true
